# chess-trainer

./: .env.example  .gitignore.txt  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 21bdae5b1254_add_analysis_jobs_table.py  60866041d61d_initial_schema.py
app/: config.py  database.py  main.py
app/models/: db.py  schemas.py
app/routers/: analysis.py  games.py  jobs.py  profiles.py
app/services/: analysis_service.py  engine_service.py  game_service.py  job_service.py  lichess_service.py  llm_service.py  profile_service.py
app/utils/: pgn_parser.py  validators.py
scripts/: check_db.py
tests/: conftest.py  test_analysis_service.py  test_pgn_parser.py  test_profile_service.py
